@@ -1,3 +1,7 @@
+Wed Aug 05 05:40:39 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/colour_data.py: Fix not to use defaultdict.
+
 Wed Aug 05 05:40:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/fieldactions.py: Fix to work with FieldGroups again.
